cmake_minimum_required(VERSION 3.7)
add_compile_options(-fPIC)
add_compile_options(-g)
find_package(fmt 4.0.0 CONFIG REQUIRED)
add_executable(plugintest host.cpp plugin.cpp pluginmanager.cpp ../celcompat/fs.cpp ../celutil/util.cpp)
include_directories(. ..)
target_link_libraries(plugintest fmt::fmt dl)
add_library(myplug MODULE myplug.cpp)
