macro(install_perl_tools)
  if(${ARGC} LESS 1)
    message(FATAL_ERROR "build_cmod_tool requires at least 1 argument")
  endif()

  set(__sources ${ARGV})

  install(PROGRAMS ${__sources} DESTINATION ${CMAKE_INSTALL_BINDIR})
endmacro()

add_subdirectory(binaries)
add_subdirectory(charm2)
add_subdirectory(cmod)
add_subdirectory(galaxies)
add_subdirectory(globulars)
add_subdirectory(qttxf)
add_subdirectory(spice2xyzv)
add_subdirectory(stardb)
add_subdirectory(vsop)
add_subdirectory(xindex)
add_subdirectory(xyzv2bin)
